--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8081
+  port: 8082
   servlet:
     context-path: /bars
 
 spring:
   application:
-    name: bff
+    name: bars
 
-bff:
+bars:
   path:
     actuator: /actuator
