--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=8082
 server.servlet.context-path= /bars
 spring.application.name= bars
 bars.path.actuator= /actuator
+
+# -- MYSQL --
+spring.datasource.url=jdbc:mysql://localhost/chopp_coins
+spring.datasource.username= ccoins
+spring.datasource.password= chopp_coins2022
+bind-address="127.0.0.1"
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
