--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,20 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Validators -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Model Mapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 		<!-- HIBERNATE SUPPORT -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
