--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,14 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ccoins</groupId>
-	<artifactId>Bars</artifactId>
+	<artifactId>${app.name}</artifactId>
 	<version>1.0.0</version>
 	<name>Bars</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>war</packaging>
 	<properties>
 		<java.version>11</java.version>
+		<app.name>bars-app</app.name>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -72,9 +74,17 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- TOMCAT -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<finalName>${app.name}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
