--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=${PORT:8082}
-server.servlet.context-path= /bars
-spring.application.name= bars
+server.servlet.context-path= /bars-app
+spring.application.name= bars-app
 bars.path.actuator= /actuator
 
 # -- MYSQL --
