--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spotify.config.auth.url = https://accounts.spotify.com/authorize
 spotify.config.auth.secret = 19e503fd3eda4993887d065f067af493
 spotify.config.auth.client-id = 5b70c483d647469eb1612f89eaf7e9b9
 spotify.config.auth.scopes = playlist-modify-public,playlist-modify-private,user-modify-playback-state,user-top-read,user-read-currently-playing,user-read-recently-played,user-read-playback-state,user-read-private,user-read-email
-
+spotify.playback.cron = 5000
 
 
