fix rules con acentos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.username= ccoins
 spring.datasource.password= chopp_coins2022
 bind-address="127.0.0.1"
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+voting.name=Vot\u00E1 la pr\u00F3xima canci\u00F3n
+voting.rules=Mientras la canci\u00F3n actual est\u00E9 sonando, pod\u00E9s votar una de las tres canciones siguientes. \nY si la que votaste es la ganadora, sumas puntos!
