--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 <!--	<packaging>war</packaging>-->
 	<properties>
 		<java.version>11</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<app.name>bars-app</app.name>
 		<swagger.version>2.9.2</swagger.version>
 		<spring-cloud.version>2020.0.3</spring-cloud.version>
