--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 voting.name=Vot\u00E1 la pr\u00F3xima canci\u00F3n
 voting.rules=Mientras la canci\u00F3n actual est\u00E9 sonando, pod\u00E9s votar una de las tres canciones siguientes. \nY si la que votaste es la ganadora, sumas puntos!
+
+codes.name=Ingres\u00e1 tu c\u00F3digo
+codes.rules=Si conseguiste un c\u00F3digo promocional, ingresalo manualmente y reclam\u00e1 tu premio. \n¡Pero no te duermas! Record\u00e1 que los códigos se vencen.
